# json2csv

./: .gitignore  CHANGELOG.md  CONTEXT.md  LICENSE  README.md  index.html  json2csv.html  pyproject.toml  pyrightconfig.json  requirements.txt  search.js
.github/workflows/: ci.yml
docs/: index.md
ejemplos/: nested.json  sample.json
script/: run_quality.sh
src/json2csv/: __init__.py  _version.py  cli.py  converter.py
tests/: __init__.py  test_cli.py  test_converter.py
